Implement getLibraryTracks
