# bindings/go/openapi/oas_request_encoders_gen.go
@@ -162,6 +162,20 @@ func encodeGetGlobalTopTracksRequest(
 	return nil
 }
 
+func encodeGetLibraryTracksRequest(
+	req *LibraryGetRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeGetListenSessionsRequest(
 	req *ListensSessionsRequest,
 	r *http.Request,
